fixtures/corpus/invalid/typ-modifier-wrong-base.rune
[TYP:uuid] count: number
    a numeric type wrongly marked as a uuid string
